dessplay/tests/snapshots/ui_app__f11_log_view.snap
---
source: dessplay/tests/ui_app.rs
assertion_line: 3095
expression: screen
---
┌Logs · LIVE───────────────────────────────────────────────────────────────────────────────────────┐
│Session only · Startup: info                                                                      │
│DessPlay: [ Startup ▾ ]                                                                           │
│Rust (other crates): [ Startup ▾ ]                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│Tab: control · Enter: dropdown · ↑/↓/PgUp/PgDn: scroll · End: live · F11/Esc: close               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Recent chat───────────────────────────────────────────────────────────────────────────────────────┐
│01:00 * Recent chat remains visible                                                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ctrl-f / Search | Tab Control | Enter Choose | ↑/↓ Scroll/select | End Live | Esc Close | F4 Dungeon
