dessplay/tests/snapshots/ui_app__first_run_opens_settings_modal.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — Account & connection─────────────────────────────────────┐              │
│              │[Account !] [Playback] [Files !] [IRC] [AI] [Houseguest]            │              │
│              │Username                                                            │              │
│              │Server                  dessplay.brage.info              next launch│              │
│              │Password                                                 next launch│──────────────┘
│              │Ready on startup        no                               next launch│──────────────┐
│              │                                                                    │              │
│              │Update track            master           requires installed launcher│              │
│              │[Reset synced state]                  discard + re-adopt from server│              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
└──────────────│                                                                    │              │
┌──────────────│                                                                    │              │
│say something…│[Save] — needs a username, a password, a media root                 │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
