dessplay/tests/snapshots/ui_app__image_renders_inline_with_halfblocks_picker.snap
---
source: dessplay/tests/ui_app.rs
assertion_line: 3336
expression: "render(&mut ui, 100, 30)"
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│01:00 irc dagger: look                          ││                                                │
│  https://x.example/shot.png                    ││                                                │
│      ┌──┐                                      ││                                                │
│      │▄▄│                                      ││                                                │
│      │▄▄│                                      ││                                                │
│      │▄▄│                                      ││                                                │
│      │▄▄│                                      ││                                                │
│      └──┘                                      │└────────────────────────────────────────────────┘
│                                                │┌Users───────────────────────────────────────────┐
│                                                ││kim [ready]                                     │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                │└────────────────────────────────────────────────┘
│                                                │┌Playlist────────────────────────────────────────┐
│                                                ││  [Add New]                                     │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘│                                                │
┌────────────────────────────────────────────────┐│                                                │
│say something…                                  ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
                                                                                    link: measuring…
────────────────────────────────────────────────────────────────────────────────────────────────────
⏸ paused
Nothing playing
Tab Next pane | Enter Send | PgUp/Dn Scroll | ↑↓ History | Esc Clear | Ctrl-f Search | F2 Subs: off
