dessplay/tests/snapshots/ui_app__layout_snapshot_empty_state.snap
---
source: dessplay/tests/ui_app.rs
assertion_line: 204
expression: "render(&mut ui, 100, 30)"
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                │└────────────────────────────────────────────────┘
│                                                │┌Users───────────────────────────────────────────┐
│                                                ││kim [ready]                                     │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                │└────────────────────────────────────────────────┘
│                                                │┌Playlist────────────────────────────────────────┐
│                                                ││  [Add New]                                     │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘│                                                │
┌────────────────────────────────────────────────┐│                                                │
│say something…                                  ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
                                                                                    link: measuring…
────────────────────────────────────────────────────────────────────────────────────────────────────
⏸ paused
Nothing playing
Tab Next pane | Enter Send | PgUp/Dn Scroll | ↑↓ History | Esc Clear | Ctrl-f Search | F2 Subs: off
