dessplay/tests/snapshots/ui_app__settings_commentary_layout_snapshot.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — AI commentary────────────────────────────────────────────┐              │
│              │[Account] [Playback] [Files] [IRC] [AI]                             │              │
│              │Anthropic API token                                      Baughn only│              │
│              │Comment interval        Off                            needs a token│              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
└──────────────│                                                                    │              │
┌──────────────│Sends recent subtitles and a player screenshot to Anthropic.        │              │
│say something…│[Save]                                                              │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
