dessplay/tests/snapshots/ui_app__settings_files_layout_snapshot_scrolls_many_roots.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — Files & transfers────────────────────────────────────────┐              │
│              │[Account] [Playback] [Files] [IRC] [AI] [Houseguest]                │              │
│              │Media root              …ng-library-root-name-that-needs-clipping/11│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/12│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/13│──────────────┘
│              │Media root              …ng-library-root-name-that-needs-clipping/14│──────────────┐
│              │Media root              …ng-library-root-name-that-needs-clipping/15│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/16│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/17│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/18│              │
│              │Media root              …ng-library-root-name-that-needs-clipping/19│              │
│              │[Add media root]                                                    │              │
│              │                                                                    │──────────────┘
│              │Cache retention         7 days                                      │──────────────┐
│              │Auto-download           yes                                         │              │
│              │Archive subdirectory    yes                                         │              │
│              │Auto-archive watched    no                                          │              │
└──────────────│BitTorrent downloads    no          off: immediate · on: next launch│              │
┌──────────────│Upload limit            unlimited                        next launch│              │
│say something…│[Save]                                                              │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
