dessplay/tests/snapshots/ui_app__settings_houseguest_layout_snapshot.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — Houseguest───────────────────────────────────────────────┐              │
│              │[Account] [Playback] [Files] [IRC] [AI] [Houseguest]                │              │
│              │Visits                  After 1 minute idle                         │              │
│              │Resident                yes        stays through playback and typing│              │
│              │[Osaka moved out]                                                   │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
└──────────────│                                                                    │              │
┌──────────────│                                                                    │              │
│say something…│[Save]                                                              │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
