dessplay/tests/snapshots/ui_app__settings_irc_layout_snapshot.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — IRC bridge───────────────────────────────────────────────┐              │
│              │[Account] [Playback] [Files] [IRC] [AI] [Houseguest]                │              │
│              │IRC bridge              yes                           reconnects IRC│              │
│              │IRC server              irc.rizon.net                 reconnects IRC│              │
│              │IRC TLS                 yes                           reconnects IRC│──────────────┘
│              │IRC channel             #dess                         reconnects IRC│──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
└──────────────│                                                                    │              │
┌──────────────│IRC is public; bridged chat leaves the encrypted group.             │              │
│say something…│[Save]                                                              │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
