dessplay/tests/snapshots/ui_app__settings_playback_layout_snapshot.snap
---
source: dessplay/tests/ui_app.rs
expression: screen
---
┌Chat────────────────────────────────────────────┐┌The List────────────────────────────────────────┐
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│              ┌Settings — Playback & display───────────────────────────────────────┐              │
│              │[Account] [Playback] [Files] [IRC] [AI]                             │              │
│              │Player                  mpv                        WIP — not applied│              │
│              │Subtitle display        Off                                         │              │
│              │Speaker names           no                         subtitles are off│──────────────┘
│              │Speaker colors          yes                       separate pane only│──────────────┐
│              │Color overflow          Reuse colors    limited-color terminals only│              │
│              │Commentary marquee      Marquee                                     │              │
│              │Inline chat images      yes                                         │              │
│              │Dungeon injury effects  Full                                        │              │
│              │Houseguest              After 1 minute idle                         │              │
│              │[Osaka moved out]                                                   │              │
│              │                                                                    │──────────────┘
│              │                                                                    │──────────────┐
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
└──────────────│                                                                    │              │
┌──────────────│                                                                    │              │
│say something…│[Save]                                                              │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
                                                                                   link: connecting…
────────────────────────────────────────────────────────────────────────────────────────────────────
⚡  connecting to server…
Nothing playing
←→ Category | Enter Edit/Toggle | S Save | Esc Cancel | F4 Dungeon | F11 Logs | F12 Layout | Ctrl-r
